<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zomato_red"
        tools:context=".VerifyOTP">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="131dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:text="@string/sent_verif_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_otp_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dummy_number"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.chaos.view.PinView
            android:id="@+id/pinview"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:cursorVisible="true"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@color/white"
            android:textColor="@color/black"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="10dp"
            app:itemWidth="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_phoneNumber" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/pinview">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/verify_btn_background"
                android:padding="10dp"
                android:text="@string/verify"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_re_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/verify_btn_background"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/re_send"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@drawable/divide_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".75"
                android:text="@string/resend_otp_in"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight=".25"
                android:text="@string/_0_00"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@drawable/divide_view" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>