<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_offers"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_offerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:text="@string/title"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_offerType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/title_activity_main"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_offerPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/_250"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toStartOf="@id/tv_offerPrice"
                android:padding="2dp"
                android:src="@drawable/currency_rupee" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:src="@drawable/timer_icon" />

            <TextView
                android:id="@+id/tv_offerTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/_0_00_min"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/vertical_line"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/hot_deal" />

            <TextView
                android:id="@+id/tv_offerDeal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/_50_off_up_to_100"
                android:textColor="@color/blue" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>