<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/india_s_food_delivery_n_and_dinning_app"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@drawable/divide_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/log_in_or_sign_up"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@drawable/divide_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="15dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp_countryCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_rectangle_shape"
            android:paddingTop="6dp"
            android:paddingBottom="6dp" />

        <EditText
            android:id="@+id/tv_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/background_rectangle_shape"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/continue_btn_background"
        android:padding="5dp"
        android:text="Continue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>