<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".fragment.ui.delivery.DeliveryFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="22dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="17dp"
                        android:layout_weight=".5"
                        android:src="@drawable/pin" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/kj_somaiya_"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:gravity="center_horizontal|top"
                                android:text="@string/kj_somaiya_"
                                android:textAppearance="@style/kj_somaiya_" />

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icon_back" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <TextView
                            android:id="@+id/vidyanagar_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginStart="12dp"
                            android:gravity="center_horizontal|top"
                            android:text="@string/vidyanagar_"
                            android:textAppearance="@style/vidyanagar_" />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight=".75"
                        android:background="@drawable/profile_pic_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/baseline_person_24"
                        android:textColor="#FFF9F9"
                        android:textSize="24sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tv_searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/search_bar_background"
                    android:drawableStart="@drawable/search"
                    android:drawableEnd="@drawable/mic_and_vertical_line"
                    android:padding="15dp"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <View
                        android:id="@+id/line_1"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                    <TextView
                        android:id="@+id/log_in_or_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight=".5"
                        android:singleLine="true"
                        android:text="@string/recommended_txt"
                        android:textAlignment="center"
                        android:textAppearance="@style/log_in_or_s" />

                    <View
                        android:id="@+id/line_2"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    tools:itemCount="2"
                    tools:listitem="@layout/list_item" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <View
                        android:id="@+id/line_3"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                    <TextView
                        android:id="@+id/exp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight=".5"
                        android:singleLine="true"
                        android:text="@string/explore"
                        android:textAlignment="center"
                        android:textAppearance="@style/log_in_or_s" />

                    <View
                        android:id="@+id/line_4"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_explore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    tools:itemCount="2"
                    tools:listitem="@layout/explore_list_item" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <View
                        android:id="@+id/line_5"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                    <TextView
                        android:id="@+id/whats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight=".5"
                        android:singleLine="true"
                        android:text="@string/whats"
                        android:textAlignment="center"
                        android:textAppearance="@style/log_in_or_s" />

                    <View
                        android:id="@+id/line_6"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1.75"
                        android:background="@drawable/line_1" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hotDeals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:listitem="@layout/whats_on_mind_item" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>